hard-gists/6838974/run.log
=== Docker Run Log for 6838974 ===
Started at: Mi 29. Okt 16:43:45 CET 2025

[2025-10-29 16:43:45] START: Running container for 6838974
[2025-10-29 16:43:46] SUCCESS: Container 903517d5f423fe734a2b0ceab6c4bc0812f9695d3460e577e2e3e4ae4bce0fb1 started for 6838974
=== Container logs for 6838974 ===
  File "/snippet.py", line 116
    print "Usage: %s [-d output] [--dry-run] [--rename] filenames" % sys.argv[0]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6838974 ===
[2025-10-29 16:43:48] INFO: Container 903517d5f423fe734a2b0ceab6c4bc0812f9695d3460e577e2e3e4ae4bce0fb1 has stopped
